--- a/google-samples-microservices-demo-productcatalogservice/Dockerfile
+++ b/google-samples-microservices-demo-productcatalogservice/Dockerfile
@@ -1,2 +1,2 @@
-gcr.io/google-samples/microservices-demo/productcatalogservice:v0.1.0
+FROM gcr.io/google-samples/microservices-demo/productcatalogservice:v0.1.0
 
