--- a/google-samples-microservices-demo-shippingservice/Dockerfile
+++ b/google-samples-microservices-demo-shippingservice/Dockerfile
@@ -1,2 +1,2 @@
-gcr.io/google-samples/microservices-demo/shippingservice:v0.1.0
+FROM gcr.io/google-samples/microservices-demo/shippingservice:v0.1.0
 
